Fix margins for pending message indicator (prevent overflow)

--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -9,7 +9,7 @@
         overflow: hidden;
 
         &:last-child {
-            margin-bottom: 0.5em;
+            margin-bottom: 0.25em;
         }
 
         &.merge-with-next {
