--- a/stylesheets/_thread.scss
+++ b/stylesheets/_thread.scss
@@ -339,25 +339,26 @@ $asideBackground: $accent2;
             .f-pending {
                 flex: 0 0 auto;
                 font-size: 0.75em;
-                padding: 0 1.38em 0.5em;
-                margin-top: -1em;
+                padding: 0 1.38em;
                 display: flex;
 
                 > .activity {
-                    transition: opacity 200ms, transform 200ms, width 200ms, height 200ms;
+                    transition: opacity, transform, width, height, margin;
+                    transition-duration: 200ms;
                     transform: scale(0);
                     opacity: 0;
-                    margin-right: 1em;
                     min-width: auto !important;
                     min-height: auto !important;
                     width: 0 !important;
                     height: 0 !important;
+                    margin: 0;
 
                     &.active {
                         transform: scale(1);
                         opacity: 0.4;
                         width: 2em !important;
                         height: 2em !important;
+                        margin: 0 0.5em 0.5em 0;
 
                         &.radiate {
                             opacity: 0.8;
